prevent overflow
Prevent overflow y

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 #scroll {
     height: 568px;
     overflow-x: scroll;
+    overflow-y: hidden;
     white-space: nowrap;
     width: 100%;
 }
@@ -77,7 +78,7 @@ body {
 
 #loading {
     width: 100%;
-    height: 100%;
+    height: 120%;
 }
 
 .dis-none {
